--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Filmes Populares</string>
     <string name="text_view">TextView</string>
+    <string name="search">Search</string>
 </resources>
